--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         crossorigin="anonymous"></script>
 <div class="container"
     <div class="otsikko">
-        <h1>Tervetuloa Suomi koodarit yhteisöön! Yhteisö on perustettu marraskuussa 2021, ja se kasvaa koko ajan. Kaikki otetaan lämpimästi vastaan. Liitythän myös meidän Discord
+        <h1>Tervetuloa Suomi koodarit nettisivulle! Yhteisö on perustettu marraskuussa 2021, ja se keskittyy koodaamiseen ja kaikkeen siihen liittyvään. Uudet tulokkaat otetaan lämpimästi vastaan. Liitythän myös meidän Discord
             kanavalle.</h1>
     </div>
 </div>
