--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
   </nav>
 
   <main>
-    <div class="jotain">
-      <img src="assets/imgs/code-bg.jpg" class="img-fluid" alt="Responsive image">
+    <div class="text-center">
+      <img src="assets/imgs/code-bg.jpg" class="img-fluid " alt="Responsive image">
+      <img src="assets/imgs/Logo.png" class="img-fluid " alt="Responsive image">
     </div>
+
     <div class="container">
       <div class="row g-0">
         <div class="col">
