--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
   <main>
     <div class="text-center">
       <img src="assets/imgs/code-bg.jpg" class="img-fluid " alt="Responsive image">
-      <img src="assets/imgs/Logo.png" class="img-fluid " alt="Responsive image">
     </div>
-
+    <div class="text-center">
+      <img src="assets/imgs/Logo.png" class="rounded" alt="Responsive image">
+    </div>
     <div class="container">
       <div class="row g-0">
         <div class="col">
