--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
   <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Main CSS -->
-  <link href="navbar-top-fixed.css" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Suomi Koodarit</a>
@@ -29,16 +27,15 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about.html">About</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
   <main>
     <div class="jotain">
       <img src="assets/imgs/code-bg.jpg" class="img-fluid" alt="Responsive image">
