--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
     </div>
   </nav>
   <main>
-    <div class="text-center">
-      <img src="assets/imgs/code-bg.jpg" class="img-fluid opacity-50" alt="Responsive image">
+    <div class="bg-black">
+    <div class="main-bg text-center">
+      <img src="assets/imgs/Logo.png" class="blurred rounded" alt="Responsive image">
     </div>
-    <div class="text-center">
-      <img src="assets/imgs/Logo.png" class="rounded"  alt="Responsive image">
-    </div>
+  </div>
     <div class="container">
       <div class="row g-0">
         <div class="col">
