Fixed index.html logo placement

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Suomi Koodarit</a>
+      <a class="navbar-brand" href="#">
+        Suomi Koodarit
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -38,20 +40,20 @@
   </nav>
   <main>
     <div class="bg-black">
-    <div class="main-bg text-center">
-      <img src="assets/imgs/Logo.png" class="blurred rounded" alt="Responsive image">
+      <div class="main-bg text-center">
+        <img class="logo" src="assets/imgs/Logo.png" class="blurred rounded" alt="Responsive image">
+      </div>
     </div>
-  </div>
-    <div class="container">
-      <div class="row g-0">
+    <div class="container mt-3">
+      <div class="row">
         <div class="col">
-          
-          <h1>Suomi Koodarit</h1>
-          <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it
-            will remain fixed to the top of your browser’s viewport.</p>
-          <iframe src="https://discord.com/widget?id=903673793074036776&theme=dark" width="350" height="500"
-            allowtransparency="true" frameborder="0"
-            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          <h1>
+            Suomi Koodarit
+          </h1>
+          <p class="lead">
+            This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it
+            will remain fixed to the top of your browser’s viewport.
+          </p>
         </div>
       </div>
     </div>
