--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h1 class="text-3xl mt-5">
             Liity mukaan suomi koodarit discord yhteisöömme.
           </h1>
-          <a href="https://discord.com/invite/QSFYnACYrt" target="_blank"><button type="button" class="nappula btn mt-5">LIITY DISCORDIIN</button></a>
+          <a href="https://discord.com/invite/Q4ErM7Ux7H" target="_blank"><button type="button" class="nappula btn mt-5">LIITY DISCORDIIN</button></a>
         </div>
         <div class="mt-10">
           <iframe src="https://discord.com/widget?id=903673793074036776&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
