--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="author" content="Mailar, Version, Mysterymoment">
   <meta name="keywords" content="suomikoodarit, koodaritsuomi, suomi, koodarit, finland, studygroup">
   <title>Suomi Koodarit</title>
-  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
   <nav class="navbar-background">
