--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
   <meta name="author" content="Mailar, Version, Mysterymoment">
   <meta name="keywords" content="suomikoodarit, koodaritsuomi, suomi, koodarit, finland, studygroup">
   <title>Suomi Koodarit</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="assets/imgs/favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/src/app.css"
+  <link rel="icon" href="/assets/imgs/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
   <nav class="navbar-background">
@@ -40,7 +41,7 @@
   <main>
     <div class="bg-black">
       <div class="main-bg text-center">
-        <img class="logo" src="assets/imgs/Logo.png" class="blurred rounded" alt="Responsive image">
+        <img class="logo" src="/assets/imgs/Logo.png" class="blurred rounded" alt="Responsive image">
       </div>
     </div>
     <div class="container max-w-7xl mt-10 mx-auto px-2 sm:px-6 lg:px-8">
