--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="suomikoodarit, koodaritsuomi, suomi, koodarit, finland, studygroup">
   <title>Suomi Koodarit</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="/src/app.css"
+  <link rel="stylesheet" href="/src/app.css">
   <link rel="icon" href="/assets/imgs/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
