Updated current design

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
   <title>Suomi Koodarit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/src/app.css">
-  <link rel="icon" href="/assets/imgs/favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="/assets/imgs/logo.png" type="image/x-icon"/>
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+
+
 </head>
 <body>
   <nav class="navbar-background">
@@ -47,16 +50,27 @@
     <div class="container max-w-7xl mt-10 mx-auto px-2 sm:px-6 lg:px-8">
       <div class="row">
         <div class="col">
-          <h1 class="text-6xl">
+          <h1 class="text-5xl">
             Suomi Koodarit
           </h1>
+          <br>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+          <br>
           <h1 class="text-3xl mt-5">
             Liity mukaan suomi koodarit discord yhteisöömme.
           </h1>
-          <a href="https://discord.com/invite/Q4ErM7Ux7H" target="_blank"><button type="button" class="nappula btn mt-5">LIITY DISCORDIIN</button></a>
-        </div>
-        <div class="mt-10">
-          <iframe src="https://discord.com/widget?id=903673793074036776&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          <br>
+          <img src="/assets/imgs/discord.png" alt="def" class="discord">
+          <a href="https://discord.com/invite/Q4ErM7Ux7H" target="_blank"><button type="button" class="nappula btn mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</button></a>
+          <br>
+          <br>
+          <br>
+          <div class="footer">
+            <p>Copyright 2021 &copy; suomikoodarit.fi</p>
+          </div>
+          <br>
         </div>
       </div>
     </div>
