--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,8 @@
           </h1>
           <br>
           <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Tervetuloa nettisivuillemme. <blue>Suomi Koodarit</blue> on marraskuussa 2021 perustettu Discord palvelin, jossa on pääsääntöisesti keskustelua koodaamisesta, pelikehityksestä ja muista tietokonemaailmaan liittyvistä asioista. Teimme yhteisön, jotta näistä asioista olisi helppo alusta keskustella ja kehittyä. Palvelimella on päivittäin keskustelua ja haluamme auttaa muita, jolloin kehittyminen tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat lämpimästi tervetulleita. 
+
           </p>
           <br>
           <h1 class="text-3xl mt-5">
@@ -65,6 +66,7 @@
           <img src="/assets/imgs/discord.png" alt="def" class="discord">
           <a href="https://discord.com/invite/Q4ErM7Ux7H" target="_blank"><button type="button" class="nappula btn mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</button></a>
           <br>
+          <a href="https://disboard.org/server/903673793074036776" target="_blank"><button type="button" class="nappula btn mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</button></a>
           <br>
           <br>
           <div class="footer">
