--- a/public/index.html
+++ b/public/index.html
@@ -69,13 +69,17 @@
           <a href="https://disboard.org/server/903673793074036776" target="_blank"><button type="button" class="nappula btn mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</button></a>
           <br>
           <br>
-          <div class="footer">
-            <p>Copyright 2021 &copy; suomikoodarit.fi</p>
-          </div>
           <br>
         </div>
       </div>
     </div>
   </main>
+  <div class="footer">
+    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+      <div class="relative flex items-center justify-between h-16">
+        <p>Copyright 2021 &copy; suomikoodarit.fi</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
