--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,12 @@
   </nav>
   <main>
     <div class="bg-black">
+      <script src="/assets/js/script.js"></script>
+
       <div class="main-bg text-center">
-        <img class="logo" src="/assets/imgs/Logo.png" class="blurred rounded" alt="Responsive image">
+        <img id="logo" src="/assets/imgs/normal-logo.png" class="blurred rounded" alt="Responsive image">
       </div>
+      <script src="/assets/js/script.js"></script>
     </div>
     <div class="container max-w-7xl mt-10 mx-auto px-2 sm:px-6 lg:px-8">
       <div class="row">
@@ -57,7 +60,6 @@
           <br>
           <p>
             Tervetuloa nettisivuillemme. <blue>Suomi Koodarit</blue> on marraskuussa 2021 perustettu Discord palvelin, jossa on pääsääntöisesti keskustelua koodaamisesta, pelikehityksestä ja muista tietokonemaailmaan liittyvistä asioista. Teimme yhteisön, jotta näistä asioista olisi helppo alusta keskustella ja kehittyä. Palvelimella on päivittäin keskustelua ja haluamme auttaa muita, jolloin kehittyminen tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat lämpimästi tervetulleita. 
-
           </p>
           <br>
           <h1 class="text-3xl mt-5">
