--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
           </p>
           <br>
           <h1 class="text-3xl mt-5">
-            Liity mukaan suomi koodarit discord yhteisöömme.
+            Liity mukaan Suomi Koodarit discord yhteisöömme.
           </h1>
           <br>
           <img src="/assets/imgs/discord.png" alt="def" class="discord">
