--- a/public/index.html
+++ b/public/index.html
@@ -55,8 +55,8 @@
             Suomi Koodarit
           </h1>
           <br>
-            <pre>Tervetuloa nettisivuillemme.</pre> <p style="color: #3ec7fe;">Suomi Koodarit</p> on marraskuussa 2021 perustettu Discord palvelin, jossa on pääsääntöisesti keskustelua koodaamisesta, pelikehityksestä ja muista tietokonemaailmaan liittyvistä asioista. Teimme yhteisön, jotta näistä asioista olisi helppo alusta keskustella ja kehittyä. Palvelimella on päivittäin keskustelua ja haluamme auttaa muita, jolloin kehittyminen tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat lämpimästi tervetulleita. 
-          </p>
+          <pre>= Esittely =</pre>
+            <p style="font-size: 20px; text-align: left;">Tervetuloa nettisivuillemme. Suomi Koodarit on marraskuussa 2021 perustettu Discord palvelin, jossa on pääsääntöisesti keskustelua koodaamisesta, pelikehityksestä ja muista tietokonemaailmaan liittyvistä asioista. Teimme yhteisön, jotta näistä asioista olisi helppo alusta keskustella ja kehittyä. Palvelimella on päivittäin keskustelua ja haluamme auttaa muita, jolloin kehittyminen tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat lämpimästi tervetulleita.</p> 
           <br>
           <h1 class="text-3xl mt-5">
             Liity mukaan Suomi Koodarit discord yhteisöömme.
