--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
         </div>
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex-shrink-0 flex items-center">
-            <a href="index.html"><h1 class="suomi-koodarit">Suomi Koodarit</h1></a>
+            <div class="suomi-koodarit">
+              <a href="index.html"><h2>Suomi Koodarit</h2></a>
+            </div>
           </div>
         </div>
       </div>
@@ -63,9 +65,9 @@
           </h1>
           <br>
           <img src="/assets/imgs/discord.png" alt="def" class="discord">
-          <a href="https://discord.com/invite/Q4ErM7Ux7H" target="_blank"><button type="button" class="nappula btn mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</button></a>
+          <a href="https://discord.com/invite/Q4ErM7Ux7H" target="_blank" class="nappula mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</a>
           <br>
-          <a href="https://disboard.org/server/903673793074036776" target="_blank"><button type="button" class="nappula btn mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</button></a>
+          <a href="https://disboard.org/server/903673793074036776" target="_blank" class="nappula mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</a>
           <br>
           <br>
           <br>
