Fix all lag in the website

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,7 +7,7 @@
   <meta name="author" content="Mailar, Version, Mysterymoment">
   <meta name="keywords" content="suomikoodarit, koodaritsuomi, suomi, koodarit, finland, studygroup">
   <title>Suomi Koodarit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/dist/output.css">
   <link rel="icon" href="/assets/imgs/Logo.png" type="image/x-icon"/>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
@@ -61,9 +61,9 @@
           </h1>
           <br>
           <img src="/assets/imgs/discord.png" alt="def" class="discord">
-          <a href="https://discord.com/invite/Q4ErM7Ux7H" target="_blank" class="nappula mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</a>
+          <a href="https://discord.com/invite/Q4ErM7Ux7H" class="nappula mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</a>
           <br>
-          <a href="https://disboard.org/server/903673793074036776" target="_blank" class="nappula mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</a>
+          <a href="https://disboard.org/server/903673793074036776" class="nappula mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</a>
           <br>
           <br>
           <br>
