--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
   <meta name="author" content="Mailar, Version, Mysterymoment">
   <meta name="keywords" content="suomikoodarit, koodaritsuomi, suomi, koodarit, finland, studygroup">
   <title>Suomi Koodarit</title>
-  <link rel="stylesheet" href="/dist/output.css">
-  <link rel="icon" href="/assets/imgs/Logo.png" type="image/x-icon"/>
+  <link rel="stylesheet" href="tailwind.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="icon" href="assets/imgs/Logo.png" type="image/x-icon"/>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 <body>
@@ -43,9 +44,9 @@
   <main>
     <div class="bg-black">
       <div class="main-bg text-center">
-        <img id="logo" src="/assets/imgs/normal-logo.png" class="blurred rounded" alt="Responsive image">
+        <img id="logo" src="assets/imgs/normal-logo.png" class="blurred rounded" alt="Responsive image">
       </div>
-      <script src="/assets/js/script.js"></script>
+      <script src="assets/js/script.js"></script>
     </div>
     <div class="container max-w-7xl mt-10 mx-auto px-2 sm:px-6 lg:px-8">
       <div class="row">
@@ -60,7 +61,7 @@
             Liity mukaan Suomi Koodarit discord yhteisöömme.
           </h1>
           <br>
-          <img src="/assets/imgs/discord.png" alt="def" class="discord">
+          <img src="assets/imgs/discord.png" alt="def" class="discord">
           <a href="https://discord.com/invite/Q4ErM7Ux7H" class="nappula mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</a>
           <br>
           <a href="https://disboard.org/server/903673793074036776" class="nappula mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</a>
