--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Suomalainen koodaukseen keskittynyt discord yhteisö.">
   <meta name="author" content="Mailar, Version, Mysterymoment">
-  <meta name="keywords" content="suomikoodarit, koodaritsuomi, suomi, koodarit, finland, studygroup">
+  <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö">
   <title>Suomi Koodarit</title>
   <link rel="stylesheet" href="tailwind.css">
   <link rel="stylesheet" href="main.css">
