--- a/public/index.html
+++ b/public/index.html
@@ -1,83 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Suomalainen koodaukseen keskittynyt discord yhteisö.">
-  <meta name="author" content="Mailar, Version, Mysterymoment">
-  <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö">
-  <title>Suomi Koodarit</title>
-  <link rel="stylesheet" href="tailwind.css">
-  <link rel="stylesheet" href="main.css">
-  <link rel="icon" href="assets/imgs/Logo.png" type="image/x-icon"/>
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-</head>
-<body>
-  <nav class="navbar-background">
-    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-      <div class="relative flex items-center justify-between h-16">
-        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-          <button type="button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
-            <span class="sr-only">Open main menu</span>
-            <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-            <svg class="hidden h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
-        <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-          <div class="flex-shrink-0 flex items-center">
-            <div class="suomi-koodarit">
-              <a href="index.html"><h2>Suomi Koodarit</h2></a>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="og:title" property="og:title" content="Suomi Koodarit"/>
+    <meta name="robots" content="noindex" />
+    <meta name="googlebot" content="noindex" />
+    <meta name="description" content="Suomalainen koodaukseen keskittynyt discord yhteisö."/>
+    <meta name="author" content="Mailar, Version, Mysterymoment"/>
+    <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö"/>
+    <title>Suomi Koodarit - Official</title>
+    <link rel="stylesheet" href="tailwind.css"/>
+    <link rel="stylesheet" href="main.css"/>
+    <link rel="icon" href="assets/imgs/Logo.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+  </head>
+  <body>
+    <nav class="navbar-background">
+      <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+        <div class="relative flex items-center justify-between h-16">
+          <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+            <button
+              type="button"
+              class="
+                inline-flex
+                items-center
+                justify-center
+                p-2
+                rounded-md
+                text-gray-400
+                hover:text-white hover:bg-gray-700
+                focus:outline-none
+                focus:ring-2
+                focus:ring-inset
+                focus:ring-white
+              "
+              aria-controls="mobile-menu"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Open main menu</span>
+              <svg
+                class="block h-6 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"
+                />
+              </svg>
+              <svg
+                class="hidden h-6 w-6"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                aria-hidden="true"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M6 18L18 6M6 6l12 12"
+                />
+              </svg>
+            </button>
+          </div>
+          <div
+            class="
+              flex-1 flex
+              items-center
+              justify-center
+              sm:items-stretch sm:justify-start
+            "
+          >
+            <div class="flex-shrink-0 flex items-center">
+              <a href="index.html">
+                <h1>Suomi Koodarit</h1>
+              </a>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="sm:hidden" id="mobile-menu">
-      <div class="px-2 pt-2 pb-3 space-y-1">
+      <div class="sm:hidden" id="mobile-menu">
+        <div class="px-2 pt-2 pb-3 space-y-1"></div>
       </div>
-    </div>
-  </nav>
-  <main>
-    <div class="bg-black">
-      <div class="main-bg text-center">
-        <img id="logo" src="assets/imgs/normal-logo.png" class="blurred rounded" alt="Responsive image">
+    </nav>
+    <main>
+      <div class="bg-black">
+        <div class="main-bg text-center">
+          <img
+            id="logo"
+            src="assets/imgs/normal-logo.png"
+            class="blurred rounded"
+            alt="Suomi Koodarit"
+          />
+        </div>
+        <script src="assets/js/script.js"></script>
       </div>
-      <script src="assets/js/script.js"></script>
-    </div>
-    <div class="container max-w-7xl mt-10 mx-auto px-2 sm:px-6 lg:px-8">
-      <div class="row">
-        <div class="">
-          <h1 class="text-5xl">
-            Suomi Koodarit
-          </h1>
-          <br>
-            <p style="font-size: 20px; text-align: left;">Tervetuloa nettisivuillemme. <blue>Suomi Koodarit</blue> on marraskuussa 2021 perustettu Discord palvelin, jossa on pääsääntöisesti keskustelua koodaamisesta, pelikehityksestä ja muista tietokonemaailmaan liittyvistä asioista. Teimme yhteisön, jotta näistä asioista olisi helppo alusta keskustella ja kehittyä. Palvelimella on päivittäin keskustelua ja haluamme auttaa muita, jolloin kehittyminen tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat lämpimästi tervetulleita.</p> 
-          <br>
-          <h1 class="text-3xl mt-5">
+      <div class="container max-w-7xl mt-10 mx-auto px-2 sm:px-6 lg:px-8">
+        <div class="row">
+          <h2>Tietoa Ryhmästämme</h2>
+          <p>
+            Tervetuloa. <blue>Suomi Koodarit</blue> on marraskuussa 2021
+            perustettu Discord palvelin, jossa on pääsääntöisesti keskustelua
+            koodaamisesta, pelikehityksestä ja muista tietokonemaailmaan
+            liittyvistä asioista. Teimme yhteisön, jotta näistä asioista olisi
+            helppo alusta keskustella ja kehittyä. Palvelimella on päivittäin
+            keskustelua ja haluamme auttaa muita, jolloin kehittyminen
+            tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on
+            tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat
+            lämpimästi tervetulleita.
+          </p>
+          <h3>
             Liity mukaan Suomi Koodarit discord yhteisöömme.
-          </h1>
-          <br>
-          <img src="assets/imgs/discord.png" alt="def" class="discord">
-          <a href="https://discord.com/invite/Q4ErM7Ux7H" class="nappula mt-5"><i class="fas fa-plug"></i> LIITY DISCORDIIN</a>
-          <br>
-          <a href="https://disboard.org/server/903673793074036776" class="nappula mt-5"><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY TÄSTÄ</a>
-          <br>
-          <br>
-          <br>
+          </h3>
+          <img src="assets/imgs/discord.png" alt="suomi-koodarit-discord" class="discord" />
+          <a href="https://discord.com/invite/Q4ErM7Ux7H" class="btn mt-5"
+            ><i class="fas fa-plug"></i> LIITY DISCORDIIN</a
+          >
+          <br />
+          <a
+            href="https://disboard.org/server/903673793074036776"
+            class="btn mt-5"
+            ><i class="fas fa-plug"></i> JOS LINKKI ON VANHENTUNUT, LIITY
+            TÄSTÄ</a
+          >
+        </div>
+      </div>
+    </main>
+    <div class="footer">
+      <div class="max-w-7xl mx-auto px-2 sm:px-6 mt-10 lg:px-8">
+        <div class="relative flex items-center justify-between h-16">
+          <p>Created by Suomi koodarit &copy; 2021</p>
         </div>
       </div>
     </div>
-  </main>
-  <div class="footer">
-    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-      <div class="relative flex items-center justify-between h-16">
-        <p>Copyright 2021 &copy; suomikoodarit.fi</p>
-      </div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
