--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
             "
           >
             <div class="flex-shrink-0 flex items-center">
-              <a href="index.html">
+              <a href="#">
                 <h1>Suomi Koodarit</h1>
               </a>
             </div>
