--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
               tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat
               lämpimästi tervetulleita.
             </p>
-              <h3>Liity mukaan Suomi Koodarit discord yhteisöömme.</h3>
-              <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity Yhteisöömme </a>
+              <h3>Liity mukaan Suomi Koodarit discord yhteisöön.</h3>
+              <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity yhteisöön </a>
           </div>
           <div class="right-container">
             <iframe src="https://discord.com/widget?id=903673793074036776&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>          
