--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
           <div class="left-container">
             <h2>Tietoa Ryhmästämme</h2>
             <p>
-              <blue>SuomiKoodarit</blue> on marraskuussa 2021 perustettu Discord palvelin, jossa pääsääntöisesti on keskustelua koodaamisesta, pelikehityksestä, webkehityksestä ja muista tietokonemaailmaan liittyvistä asioista. 
+              <blue>SuomiKoodarit</blue> on 2021 discordiin perustettu suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan muun muassa ohjelmistokehityksestä, ohjelmoinnista ja muista tietokonemaailmaan sivuavista asioista. 
               <br>
               <br>
-              Teimme yhteisön, jotta näistä asioista olisi helppo keskustella ja kehittyä. Palvelimella on päivittäin keskustelua ja haluamme auttaa muita, jolloin kehittyminen tietokonemaailman asioissa olisi mukavaa ja helpompaa. Yhteisö on tarkoitettu kaiken ikäisille ja tasoisille, ja kaikki ovat lämpimästi tervetulleita.
+              Yhteisössä käydään aktiivisesti keskusteluja ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisussa. Yhteisö on tarkoitettu kaikenikäisille ja tasoisille ohjelmoinnista kiinnostuneille.
             </p>
               <h3>Liity mukaan SuomiKoodarit discord yhteisöön.</h3>
               <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity yhteisöön </a>
