--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
           <div class="left-container">
             <h2>Tietoa Ryhmästämme</h2>
             <p>
-              <blue>SuomiKoodarit</blue> on 2021 discordiin perustettu suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan muun muassa ohjelmistokehityksestä, ohjelmoinnista ja muista tietokonemaailmaan sivuavista asioista. 
+              <blue>SuomiKoodarit</blue> on 2021 perustettu suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja tietokonemaailmaan sivuavista aiheista. 
               <br>
               <br>
-              Yhteisössä käydään aktiivisesti keskusteluja ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisussa. Yhteisö on tarkoitettu kaikenikäisille ja tasoisille ohjelmoinnista kiinnostuneille.
+              Keskustelu yhteisössä on aktiivista ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisemisessa. Yhteisö on tarkoitettu kaikenikäisille ja tasoisille ohjelmoinnista kiinnostuneille.
             </p>
               <h3>Liity mukaan SuomiKoodarit discord yhteisöön.</h3>
               <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity yhteisöön </a>
