--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="og:title" property="og:title" content="SuomiKoodarit"/>
-    <meta name="description" content="Suomalainen koodaukseen keskittynyt discord yhteisö."/>
+    <meta name="description" content="SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja IT-maailmaan liittyvistä puheenaiheista. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille."/>
     <meta name="author" content="Mailar, Version, Mysterymoment"/>
     <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö"/>
+    <meta property='og:title' content='SuomiKoodarit – Suomalaisten koodaajien yhteisö'/>
+    <meta property='og:image' content='/assets/imgs/meta.jpg'/>
+    <meta property='og:description' content='SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja IT-maailmaan liittyvistä puheenaiheista. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille.'/>
+    <meta property='og:url' content='https://suomikoodarit.fi'/>
     <title>SuomiKoodarit - Official</title>
     <link rel="stylesheet" href="tailwind.css"/>
     <link rel="stylesheet" href="main.css"/>
@@ -39,10 +42,10 @@
           <div class="left-container">
             <h2>Tietoa Ryhmästämme</h2>
             <p>
-              <blue>SuomiKoodarit</blue> on 2021 perustettu suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja tietokonemaailmaan sivuavista aiheista. 
+              <blue>SuomiKoodarit</blue> on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja tietokonemaailmaan liittyvistä aiheista. 
               <br>
               <br>
-              Keskustelu yhteisössä on aktiivista ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisemisessa. Yhteisö on tarkoitettu kaikenikäisille ja tasoisille ohjelmoinnista kiinnostuneille.
+              Keskustelu yhteisössä on aktiivista ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisemisessa. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille.
             </p>
               <h3>Liity mukaan SuomiKoodarit discord yhteisöön.</h3>
               <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity yhteisöön </a>
