--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja IT-maailmaan liittyvistä puheenaiheista. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille."/>
+    <meta name="description" content="SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja IT-maailmaan liittyvistä puheenaiheista. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille."/>
     <meta name="author" content="Mailar, Version, Mysterymoment"/>
     <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö"/>
     <meta property='og:title' content='SuomiKoodarit – Suomalaisten koodaajien yhteisö'/>
@@ -45,7 +45,7 @@
               <blue>SuomiKoodarit</blue> on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja tietokonemaailmaan liittyvistä aiheista. 
               <br>
               <br>
-              Keskustelu yhteisössä on aktiivista ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisemisessa. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille.
+              Keskustelu yhteisössä on aktiivista ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisemisessa. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille.
             </p>
               <h3>Liity mukaan SuomiKoodarit discord yhteisöön.</h3>
               <a href="https://disboard.org/server/903673793074036776" target="_blank" class="btn mt-5"><i class="fas fa-plug"></i> Liity yhteisöön </a>
