--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja IT-maailmaan liittyvistä puheenaiheista. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille."/>
+    <meta name="description" content="SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmointiin ja IT-maailmaan liittyvistä aiheista. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille."/>
     <meta name="author" content="Mailar, Version, Mysterymoment"/>
     <meta name="keywords" content="suomikoodarit, suomi, koodarit, finland, koodaus, ohjelmointi, ohjelmistokehitys, koodi, ohjelmointikieli, yhteisö"/>
     <meta property='og:title' content='SuomiKoodarit – Suomalaisten koodaajien yhteisö'/>
     <meta property='og:image' content='/assets/imgs/meta.jpg'/>
-    <meta property='og:description' content='SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja IT-maailmaan liittyvistä puheenaiheista. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille.'/>
+    <meta property='og:description' content='SuomiKoodarit on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmointiin ja IT-maailmaan liittyvistä aiheista. Yhteisö on avoin kaiken tasoisille ohjelmoinnista kiinnostuneille.'/>
     <meta property='og:url' content='https://suomikoodarit.fi'/>
     <title>SuomiKoodarit - Official</title>
     <link rel="stylesheet" href="tailwind.css"/>
@@ -42,7 +42,7 @@
           <div class="left-container">
             <h2>Tietoa Ryhmästämme</h2>
             <p>
-              <blue>SuomiKoodarit</blue> on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmoinnista ja tietokonemaailmaan liittyvistä aiheista. 
+              <blue>SuomiKoodarit</blue> on jatkuvasti kasvava suomalaisten koodaajien yhteisö. Yhteisössä keskustellaan ohjelmointiin ja tietokonemaailmaan liittyvistä aiheista. 
               <br>
               <br>
               Keskustelu yhteisössä on aktiivista ja monet jäsenistä ovat innokkaita auttamaan ohjelmoitiin liittyvien ongelmien ratkaisemisessa. Yhteisö on avoin kaikille ohjelmoinnista kiinnostuneille.
