Add Trello board

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,9 @@
           <div class="right-container">
             <iframe src="https://discord.com/widget?id=903673793074036776&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>          
           </div>
+          <div class="bottom-container">
+            <iframe src="https://trello.com/b/2V79QZlL.html" width="1200" height="1000" style=" display:block;border-style:none;margin:0 auto;"></iframe>
+          </div>
         </div>
       </div>
     </main>
